# Word-Doc-2Vec

./: README.md  data_processer.py  embedders.py  main.py  pyproject.toml  visualizer.py
